# Islam_station

./: .gitignore  AGENTS.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh
.astro/: settings.json
.github/workflows/: pages.yaml
Frontend/: .env.example  .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
Frontend/.astro/: data-store.json  settings.json
Frontend/public/: icon-preview.html  manifest.webmanifest  sw.js
Frontend/public/apis/: Get_location.js  Random_ayah.js
Frontend/public/scripts/: Get_location.js  Random_ayah.js
Frontend/src/components/: EnhancedPrayerTable.jsx  EnhancedQuranReader.jsx  HomePage.jsx  HomePrayerTable.jsx  IslamicDashboard.jsx  LanguageSwitcher.jsx  LocationPicker.jsx  Navbar.astro  PrayerSettings.jsx  PrayerSettingsPage.jsx  QuranReader.jsx  QuranSearch.jsx  Sidebar.astro  VirtualizedSurahList.jsx  prayer_Table.jsx
Frontend/src/data/: surahs.js
Frontend/src/hooks/: useLocationStorage.js
Frontend/src/i18n/: config.js
Frontend/src/layouts/: Layout.astro
Frontend/src/pages/: index.astro  login.astro  qibla.astro  signup.astro
Frontend/src/scripts/: theme.js
backend/: .env.example  __init__.py  test_connection.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py
database/assets/: The Quran Dataset.csv  ayahs.csv  dhikr.csv  editing.py  files.py  output.csv  remove.py  surahs.csv
database/migrations/: 003_add_performance_indexes.sql
database/schema/: functions.sql  indexes.sql  init.sql  tables.sql
database/scripts/: populate_prayer.py  populate_quran.py  validate_data.py
docs/: base.md  research.md
tests/: test_queries.py  test_schema.py
(+67 files in other folders)
