[project]
name = "islam-station"
version = "0.1.0"
description = "Islamic Guidance Station"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.119.0",
    "uvicorn[standard]==0.37.0",
    "gunicorn==23.0.0",
    "pydantic",
    "pydantic-settings",
    "httpx==0.28.1",
    "aiohttp==3.13.0",
    "asyncpg==0.30.0",
    "psycopg==3.2.10",
    "redis==6.4.0",
    "aioredis==2.0.1",
    "celery==5.5.3",
    "python-decouple==3.8",
    "python-multipart==0.0.20",
    "structlog==25.4.0",
    "python-json-logger==4.0.0",
    "slowapi==0.1.9",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "praytimes",
    "pyarabic>=0.6.15",
    "tenacity==9.1.2",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "black==25.9.0",
    "flake8==7.3.0",
]
